# AbExp-web

./: .env.development  .env.production  .flaskenv  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
abexp_web/: __init__.py  abexp.py  config.py  constants.py  db.py  utils.py  wsgi.py
abexp_web/config/: development.cfg  production.cfg  testing.cfg
abexp_web/templates/: index.html  result.html  result_extra_info.html
assets/: gene_map.tsv
example_files/: genomes.txt  tissues.txt
example_files/abexp.parquet/genome=hg19/chrom=chr18/: 10472381-10531151.vcf.gz.parquet  6384954-6409954.vcf.gz.parquet
tests/: .env  conftest.py  test_abexp.py
